Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106897

Android QAudioRecorder pause does not work

XMLWordPrintable

    • Android
    • 6681426b5 (tqtc/lts-5.15)
    • 2023wk02FOQtforAndroid, 2022wk46FOQtforAndroid, 2022wk48FOQtforAndroid, 2022wk50FOQtforAndroid, 2022wk52FOQtforAndroid

      On Android, the pause() function of the QAudioRecorder class does not work properly. A message "QMediaRecorder::PausedState is not supported on Android" is logged when the pause() function is called.

        1. 1569427.diff.txt
          15 kB
        2. QTBUG-106897.diff
          13 kB
        For Gerrit Dashboard: QTBUG-106897
        # Subject Branch Project Status CR V

            bartlomiejmoskal Bartlomiej Moskal
            irfan.omair@digia.com Irfan Omair
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes