Android: Handle Pause() by QAudioRecorder

Add implementation for pause() method for the QAudioRecorder on the
Android side.

Fixes: QTBUG-106897
Fixes: QTBUG-105505
Change-Id: Ie98b35c2c5dcb09c141c0216ba01c732e85e75a4
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>