src/plugins/android/src/wrappers/jni/androidmediarecorder.h
@@ -138,6 +138,8 @@ public:
 
     bool start();
     void stop();
+    void pause();
+    bool resume();
 
     void setAudioChannels(int numChannels);
     void setAudioEncoder(AudioEncoder encoder);
